add configuration & refactor api for user
